<resources>

    <!-- Activity Labels -->
    <string name="app_name">Crime Stalker</string>
    <string name="app_ReportCrime">Report Crime</string>
    <string name="app_CreateAccount">Create Account</string>
    <!--End of Activity Labels -->

    <!-- String values for RegisterUserActivity -->
    <string name="registerUserTitle">Registration Form</string>
    <string name="registerUserFirstName">*First Name</string>
    <string name="registerUserLastName">*Last Name</string>
    <string name="registerUserAddress">*Address</string>
    <string name="registerUserPhoneNumber">*Phone Number</string>
    <string name="registerUserEmail">*Email</string>
    <string name="registerUserPassword">*Password</string>
    <string name="registerUserAllowPoliceCalls">Allow Police Calls</string>
    <string name="registerUserMandatoryFields">* Mandatory Fields</string>
    <!-- End of String values for RegisterUserActivity -->

    <!-- String values for MainActivity (Login) -->
    <string name="mainLoginTitle">Welcome to Crimestalker!</string>
    <string name="mainLoginEmail">Enter Email</string>
    <string name="mainLoginPassword">Enter Password</string>
    <string name="mainLoginEnter">Sign In</string>
    <string name="mainLoginRegisterUser">Sign Up</string>
    <!-- End of String values for MainActivity (Login) -->

    <!-- String values for ReportCrimeActivity -->
    <string name="labelTitle">Title</string>
    <string name="labelDescription">Description</string>
    <string name="labelType">Type</string>
    <string name="labelComments">Comments</string>
    <string name="ReportButton">Report</string>
    <string name="ReportPolice">Police</string>
    <!--End of String values for ReportCrimeActivity -->

    <!-- String values for HomeActivity drawer menu -->
    <string name="homeDrawerViewMap">Crime Map</string>
    <string name="homeAboutCrimeStalker">About Crime Stalker...</string>
    <string name="homeWhyCrimeStalker">Why Crime Stalker?</string>
    <string name="homeHappyStalking">Happy Stalking!</string>
    <string name="homeAboutCrimeStalkerDescription">Built from the ground up, this native Android product was developed as a Software Development Project for COMP 313.
        This application allows you to report, share, and monitor crimes that are happening in your surroundings.
        The technologies used in this project were Java for the Android development and Google\'s Firebase platform for the back-end operations.\n\n
    </string>
    <string name="homeWhyCrimeStalkerDescription">Due to the recent criminal activity registered in Toronto, it is crucial to be informed
    about the events in your surroundings. Report any criminal activity that you witness, so that the police department can act swiftly.
    Safety is not only a job for the authorities but for all the people that dwell in our city!</string>
    <string name="homeWhereDoIStartDescription"></string>
    <!-- End of String values for HomeActivity drawer menu -->

    <!-- Misc items -->
    <string name="miscSubmitButton">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="drawer_description">Select one of the services listed below</string>
    <!--End of Misc items -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share_to">Share report to: </string>
    <string name="report_title">Report:</string>
    <string name="report_desc">Description:</string>
    <string name="report_loc_lat">Latitude:</string>
    <string name="report_loc_long">Longitude:</string>
    <string name="title_activity_crime_map">Map</string>
    <string name="homeDrawerReportCrime">Report Crime</string>
    <string name="homeCrimeHistory">Crime History</string>
</resources>
