<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawerMapItem"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/homeDrawerViewMap" />
        <item
            android:id="@+id/drawerReportCrime"
            android:icon="@drawable/ic_police"
            android:title="@string/homeDrawerReportCrime" />
        <item
            android:id="@+id/drawerCrimeHistory"
            android:icon="@drawable/crime_history"
            android:title="@string/homeCrimeHistory" />
        <item
            android:id="@+id/drawerReadCrime"
            android:icon="@drawable/police"
            android:title="Read Crime" />
    </group>
</menu>