<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterUserActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/gradient_bg">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scrollbars="vertical"
        android:paddingBottom="25dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="#c5ffffff"
        android:backgroundTint="@color/grey_300"
        android:elevation="2dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txtViewRegisterUserTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_dark_gray"
                    android:paddingTop="@dimen/titlePaddingTop"
                    android:text="@string/registerUserTitle"
                    android:textSize="@dimen/titleSize" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserFirstName"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserFirstName"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserLastName"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserLastName"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserAddress"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserAddress"
                    android:inputType="textPostalAddress" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserPhoneNumber"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserPhoneNumber"
                    android:maxLength="10"
                    android:inputType="phone" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserEmail"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserEmail"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextRegisterUserPassword"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserPassword"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/chkBoxRegisterUserAllowPoliceCalls"
                    android:layout_width="@dimen/editTextWidth"
                    android:layout_height="wrap_content"
                    android:text="@string/registerUserAllowPoliceCalls" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUserMandatoryFields" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnRegisterUserSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="registerUser"
                    android:textColor="@color/color_white"
                    android:text="@string/miscSubmitButton" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</RelativeLayout>